--- a/index.html
+++ b/index.html
@@ -2,19 +2,24 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>无标题文档</title>
-<link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-<link href="css/style.css" rel="stylesheet" type="text/css">
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
 </head>
 
 <body>
-<div class="container" style="background-color:bisque">此处为新 div 标签的内容</div>
-<div class="container-fluid" style="background-color:coral">此处为新 div 标签的内容</div>
-<div class="container-sm" style="background-color:cyan">此处为新 div 标签的内容</div>
-<div class="container-md" style="background-color:greenyellow">此处为新 div 标签的内容</div>
-<div class="container-lg" style="background-color:lightcoral">此处为新 div 标签的内容</div>
-<div class="container-xl" style="background-color:mediumpurple">此处为新 div 标签的内容</div>
+<p> 2018级数字媒体应用技术1班 张弘扬 </p>
+<p>&nbsp;</p>
+<div>
+  <p> 作业1</p>
+  <p>&nbsp;</p>
+</div>
+<div>
+  <p>作业2</p>
+  <p>&nbsp;</p>
+</div>
+<div>
+  <p><a href="ZY-3.html">作业3</a></p>
+  <p>&nbsp;</p>
+</div>
+	<div><a href="zy.html">响应式彩条</a></div>
 </body>
 </html>
