--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <p> 2018级数字媒体应用技术1班 张弘扬 </p>
 <p>&nbsp;</p>
 <div>
-  <p> 作业1</p>
+  <p> <a href="ZY-1.html">作业1</a></p>
   <p>&nbsp;</p>
 </div>
 <div>
-  <p>作业2</p>
+  <p><a href="ZY-2.html">作业2</a></p>
   <p>&nbsp;</p>
 </div>
 <div>
